--- a/galerija.html
+++ b/galerija.html
@@ -30,15 +30,15 @@
                         <li><a href="galerija.html">Foto Galerija</a></li>
                         <li><a href="video_galerija.html">Video Galerija</a></li>
                     </ul>
-                    <a href="images/img_01.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_01.jpg" class="thirdpicture"></a>
-                    <a href="images/img_02.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_02.jpg" class="thirdpicture"></a>
-                    <a href="images/img_03.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_03.jpg" class="thirdpicture"></a>
-                    <a href="images/img_04.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_04.jpg" class="thirdpicture"></a>
-                    <a href="images/img_05.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_05.jpg" class="thirdpicture"></a>
-                    <a href="images/img_06.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_06.jpg" class="thirdpicture"></a>
-                    <a href="images/img_07.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_07.jpg" class="thirdpicture"></a>
-                    <a href="images/img_08.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_08.jpg" class="thirdpicture"></a>
-                    <a href="images/img_09.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_09.jpg" class="thirdpicture"></a>
+                    <a href="images/img_01.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_01.jpg" alt="Bilde" class="thirdpicture"></a>
+                    <a href="images/img_02.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_02.jpg" alt="Bilde" class="thirdpicture"></a>
+                    <a href="images/img_03.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_03.jpg" alt="Bilde" class="thirdpicture"></a>
+                    <a href="images/img_04.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_04.jpg" alt="Bilde" class="thirdpicture"></a>
+                    <a href="images/img_05.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_05.jpg" alt="Bilde" class="thirdpicture"></a>
+                    <a href="images/img_06.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_06.jpg" alt="Bilde" class="thirdpicture"></a>
+                    <a href="images/img_07.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_07.jpg" alt="Bilde" class="thirdpicture"></a>
+                    <a href="images/img_08.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_08.jpg" alt="Bilde" class="thirdpicture"></a>
+                    <a href="images/img_09.jpg" data-lightbox="example-set" data-title="example"><img src="images/img_09.jpg" alt="Bilde" class="thirdpicture"></a>
                 </div>
             </div>
         </div>
