--- a/kontakti.html
+++ b/kontakti.html
@@ -42,7 +42,7 @@
         <div class='row'>
             <div class='column'>
                 <div class='green-column'>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2173.765574248699!2d24.236719216136322!3d56.987075103589376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eece9f0c474001%3A0xb4047f6a78386b62!2sSilciema%20iela%209%2C%20Vidzemes%20priek%C5%A1pils%C4%93ta%2C%20R%C4%ABga%2C%20LV-1024!5e0!3m2!1slv!2slv!4v1585568525638!5m2!1slv!2slv" width="1600" height="941" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2173.765574248699!2d24.236719216136322!3d56.987075103589376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eece9f0c474001%3A0xb4047f6a78386b62!2sSilciema%20iela%209%2C%20Vidzemes%20priek%C5%A1pils%C4%93ta%2C%20R%C4%ABga%2C%20LV-1024!5e0!3m2!1slv!2slv!4v1585568525638!5m2!1slv!2slv" width="1600" height="941" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
             <div class='column'>
